# OpenGa

./: CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
openga/: __init__.py  carbon.py  cli.py  config.py  finance.py  meb.py  montecarlo.py  policy.py  sensitivity.py  upcost.py  validation.py
tests/: baseline.json  conftest.py  test_carbon.py  test_finance.py  test_meb.py  test_policy.py  test_upcost.py  test_validation.py
tools/: build_baseline.py
